# INF251_CA_2023

./: LICENSE  README.md
lighting/: CMakeLists.txt  Matrix4.h  Vector3.h  main.cpp  shader.f.glsl  shader.v.glsl
shaders/: CMakeLists.txt  main.cpp  main_glfw.cpp  shader.f.glsl  shader.v.glsl
vbo_ibo/: CMakeLists.txt  main.cpp
